WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250907
ASSERTION FAILED: !m_deferredScrollDelta platform/ScrollView.cpp(504) : virtual void WebCore::ScrollView::scrollTo(const WebCore::ScrollPosition &)
https://bugs.webkit.org/show_bug.cgi?id=250907
Summary
ASSERTION FAILED: !m_deferredScrollDelta platform/ScrollView.cpp(504) : virtu...
Ahmad Saleem
Reported
2023-01-20 11:18:16 PST
Hi Team, While going through GitHub Commits, I faced following assert on Debug Minibrowser WK2 based of259136@main on macOS 13.1: URL -
https://github.com/WebKit/WebKit/commits/main
> Go back and forth and on old patches and opening as drop down.
I didn't find related bug so I am raising now: ASSERTION FAILED: !m_deferredScrollDelta platform/ScrollView.cpp(504) : virtual void WebCore::ScrollView::scrollTo(const WebCore::ScrollPosition &) 1 0x13a536d84 WTFCrash 2 0x280832730 WTFCrashWithInfo(int, char const*, char const*, int) 3 0x284df2364 WebCore::ScrollView::scrollTo(WebCore::IntPoint const&) 4 0x284af52d0 WebCore::FrameView::scrollTo(WebCore::IntPoint const&) 5 0x284df1adc WebCore::ScrollView::setScrollOffset(WebCore::IntPoint const&) 6 0x284df7e10 WebCore::ScrollableArea::scrollPositionChanged(WebCore::IntPoint const&) 7 0x284df7d70 WebCore::ScrollableArea::notifyScrollPositionChanged(WebCore::IntPoint const&) 8 0x284d13a60 WebCore::AsyncScrollingCoordinator::reconcileScrollingState(WebCore::FrameView&, WebCore::FloatPoint const&, std::__1::variant<std::__1::optional<WebCore::FloatPoint>, std::__1::optional<WebCore::FloatRect> > const&, WebCore::ScrollType, WebCore::ViewportRectStability, WebCore::ScrollingLayerPositionAction) 9 0x284d1371c WebCore::AsyncScrollingCoordinator::updateScrollPositionAfterAsyncScroll(unsigned long long, WebCore::FloatPoint const&, std::__1::optional<WebCore::FloatPoint>, WebCore::ScrollingLayerPositionAction, WebCore::ScrollType) 10 0x284d12e4c WebCore::AsyncScrollingCoordinator::applyScrollPositionUpdate(WebCore::ScrollUpdate&&, WebCore::ScrollType) 11 0x284d124f8 WebCore::AsyncScrollingCoordinator::applyScrollUpdate(WebCore::ScrollUpdate&&, WebCore::ScrollType) 12 0x284d122b8 WebCore::AsyncScrollingCoordinator::requestScrollPositionUpdate(WebCore::ScrollableArea&, WebCore::IntPoint const&, WebCore::ScrollType, WebCore::ScrollClamping) 13 0x284af1134 WebCore::FrameView::requestScrollPositionUpdate(WebCore::IntPoint const&, WebCore::ScrollType, WebCore::ScrollClamping) 14 0x284deb420 WebCore::ScrollableArea::setScrollPositionFromAnimation(WebCore::IntPoint const&) 15 0x284deb36c WebCore::ScrollAnimator::notifyPositionChanged(WebCore::FloatSize const&) 16 0x284dea9d0 WebCore::ScrollAnimator::setCurrentPosition(WebCore::FloatPoint const&, WebCore::ScrollAnimator::NotifyScrollableArea) 17 0x284dea920 WebCore::ScrollAnimator::scrollToPositionWithoutAnimation(WebCore::FloatPoint const&, WebCore::ScrollClamping) 18 0x284df7afc WebCore::ScrollableArea::scrollToPositionWithoutAnimation(WebCore::FloatPoint const&, WebCore::ScrollClamping) 19 0x284df3290 WebCore::ScrollView::updateScrollbars(WebCore::IntPoint const&)::$_6::operator()(WebCore::IntPoint) const 20 0x284df03f8 WebCore::ScrollView::updateScrollbars(WebCore::IntPoint const&) 21 0x284df1534 WebCore::ScrollView::setContentsSize(WebCore::IntSize const&) 22 0x284ae1cf0 WebCore::FrameView::setContentsSize(WebCore::IntSize const&) 23 0x284ad8c80 WebCore::FrameView::adjustViewSize() 24 0x284b2d0c4 WebCore::FrameViewLayoutContext::performLayout() 25 0x284b2c928 WebCore::FrameViewLayoutContext::layout() 26 0x283a7aad8 WebCore::Document::updateLayout() 27 0x283a80e4c WebCore::Document::updateLayoutIfDimensionsOutOfDate(WebCore::Element&, WebCore::DimensionsCheck) 28 0x283b67aa0 WebCore::Element::offsetWidth() 29 0x2810d7c78 WebCore::jsHTMLElement_offsetWidthGetter(JSC::JSGlobalObject&, WebCore::JSHTMLElement&) 30 0x280fc42d0 long long WebCore::IDLAttribute<WebCore::JSHTMLElement>::get<&(WebCore::jsHTMLElement_offsetWidthGetter(JSC::JSGlobalObject&, WebCore::JSHTMLElement&)), (WebCore::CastedThisErrorBehavior)3>(JSC::JSGlobalObject&, long long, JSC::PropertyName) 31 0x280fc41ac WebCore::jsHTMLElement_offsetWidth(JSC::JSGlobalObject*, long long, JSC::PropertyName) Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2023-01-20 15:08:20 PST
I have seen this assertion fairly recently.
Radar WebKit Bug Importer
Comment 2
2023-01-27 11:19:16 PST
<
rdar://problem/104753832
>
Claudio Saavedra
Comment 3
2026-06-03 08:48:07 PDT
***
Bug 310596
has been marked as a duplicate of this bug. ***
Claudio Saavedra
Comment 4
2026-06-03 08:51:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66374
EWS
Comment 5
2026-06-04 23:18:10 PDT
Committed
314619@main
(20aa31cf4f7e): <
https://commits.webkit.org/314619@main
> Reviewed commits have been landed. Closing PR #66374 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug